k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: myapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shell
                port:
                  number: 80

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80

          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
